@@ -33,6 +33,7 @@ $ -> Language fix or change
  # [#23967] Parameter $default is useless in JRegistry::exists
  # [#23966] Beez5 unused strings (Edgars Piruška)
  # [#23965] Change Database Default to MSQLi instead of MSQL
+ # [#23727] Use mootools in md_stylechanger.js (Rouven Weßling)
 
 24-Dec-2010 Christophe Demko
  # [#23857] thrice Recipient!!
